src/objects/VPO_product__c.object
<CustomObject>
    <description>Telco products</description>
    <fields>
        <fullName>Denomination__c</fullName>
        <description>Air time dnomination</description>
        <label>Denomination</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Profit__c</fullName>
        <description>Estimated VPO Profit</description>
        <label>Estimated VPO Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modal__c</fullName>
        <label>Modal</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telco_Operator__c</fullName>
        <label>Telco Operator</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>harga_beli_agen__c</fullName>
        <label>harga_beli_agen</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>VPO Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Telco_Operator__c</columns>
        <columns>Estimated_Profit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VPO Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>